syntax="proto3";

package ru.rnikonorov;

option java_multiple_files=true;
option java_package="ru.rnikonorov.protos";
option java_outer_classname="HelloWorldProto";

message HelloRequest {
  string name=1;
}

message HelloReply {
  string greeting=1;
}

service MyService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}